Still exploring how the fuck this works

--- a/SimTECH/SimTECH.csproj
+++ b/SimTECH/SimTECH.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Race\" />
+  </ItemGroup>
+
 </Project>
