--- a/SimTECH/appsettings.json
+++ b/SimTECH/appsettings.json
@@ -1,6 +1,22 @@
 {
+  "Simulation": {
+    "DisqualifyChance": 4,
+    "MistakeLowerValue": -30,
+    "MistakeUpperValue": -15,
+    "RainAdditionalRNG": 10,
+    "StormAdditionalRNG": 20,
+    "SunnyEngineMultiplier": 0.9,
+    "OvercastEngineMultiplier": 1.1,
+    "WetEngineMultiplier": 1,
+    "RainDriverReliabilityModifier": -3,
+    "StormDriverReliabilityModifier": -5,
+    "MistakeAmountRolls": 2,
+    "ChassisModifierDriverStatus": 2,
+    "PracticeRuns": 2,
+    "QualifyingRuns": 2
+  },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SimTECH-A04E455C-00CD-4643-BD1E-1DFE6FE2076E;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=OIG-DEV-MIKA\\MERCURIUSSERVER;Database=SimTechInitial;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
