Simple implementation of editing drivers

--- a/SimTECH/SimTECH/SimTECH.csproj
+++ b/SimTECH/SimTECH/SimTECH.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Grid\" />
+    <Folder Include="ViewModels\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
