Added updates to existing services, editing by cell works for leagues

--- a/SimTECH/SimTECH/appsettings.json
+++ b/SimTECH/SimTECH/appsettings.json
@@ -16,7 +16,7 @@
     "QualifyingRuns": 2
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=PC-SATURNUS;Database=SimTechInitial;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=OIG-DEV-MIKA\\MERCURIUSSERVER;Database=SimTechInitial;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
