Can create strategies and tyres more properly

--- a/SimTECH/SimTECH/SimTECH.csproj
+++ b/SimTECH/SimTECH/SimTECH.csproj
@@ -8,13 +8,16 @@
 
   <ItemGroup>
     <Compile Remove="Grid\**" />
+    <Compile Remove="Pages\Racing\Wizard\**" />
     <Content Remove="Grid\**" />
+    <Content Remove="Pages\Racing\Wizard\**" />
     <EmbeddedResource Remove="Grid\**" />
+    <EmbeddedResource Remove="Pages\Racing\Wizard\**" />
     <None Remove="Grid\**" />
+    <None Remove="Pages\Racing\Wizard\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Pages\Racing\Wizard\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
