--- a/SimTECH/SimTECH/SimTECH.csproj
+++ b/SimTECH/SimTECH/SimTECH.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Pages\Racing\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
