--- a/SimTECH/SimTECH/SimTECH.csproj
+++ b/SimTECH/SimTECH/SimTECH.csproj
@@ -28,6 +28,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\lib\" />
+    <Folder Include="wwwroot\json\" />
   </ItemGroup>
 
   <ItemGroup>
