--- a/SimTECH/SimTECH/SimTECH.csproj
+++ b/SimTECH/SimTECH/SimTECH.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Pages\Traits\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\json\" />
     <Folder Include="wwwroot\fonts\" />
