Working SQLite-implementation

--- a/SimTECH/SimTECH/appsettings.Release.json
+++ b/SimTECH/SimTECH/appsettings.Release.json
@@ -1,19 +1,26 @@
 {
   "SimConfig": {
-    "FatalityChance": 250,
-    "DisqualifyChance": 100,
-    "SafetyCarChance": 10,
-    "GapMarge": 0.05,
-    "PersonalNumbersEnabled": false,
-    "FormationLapEnabled": false,
-    "MistakeAmountRolls": 2,
-    "MistakeLowerValue": 100,
-    "MistakeUpperValue": 150,
+    "CalculationDistance": 10,
+
+    "DisqualifyChance": 150,
+    "FatalityChance": 300,
+
+    "SafetyCarChance": 5,
+    "SafetyCarGap": 30,
+    "SafetyCarReturnChance": 1,
+
+    "BattleRng": 8,
     "ChassisModifierDriverStatus": 3,
-    "CalculationDistance": 10
+    "MinimumTyreLife": -25,
+
+    "GapMarge": 0.08,
+
+    "TooMuchInfo": false,
+    "AllowMultiLeagueEntry": false
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\v11.0;Database=SimTechData;Integrated Security=true;Trusted_Connection=True;Encrypt=False;"
+    "DefaultConnection": "Server=(localdb)\\v11.0;Database=SimTechData;Integrated Security=true;Trusted_Connection=True;Encrypt=False;",
+    "LocalConnection": "Data Source=SimTechDb.db;"
   },
   "Logging": {
     "LogLevel": {
