ok not development page but whatevs, moved leagues and contracts to the same view since you always use one with the other

--- a/SimTECH/SimTECH/SimTECH.csproj
+++ b/SimTECH/SimTECH/SimTECH.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Pages\Leagues\" />
     <Folder Include="wwwroot\json\" />
   </ItemGroup>
 
