--- a/SimTECH/SimTECH/SimTECH.csproj
+++ b/SimTECH/SimTECH/SimTECH.csproj
@@ -16,17 +16,20 @@
 
   <ItemGroup>
     <Compile Remove="Grid\**" />
+    <Compile Remove="Pages\Leagues\**" />
     <Compile Remove="Pages\Racing\Wizard\**" />
     <Content Remove="Grid\**" />
+    <Content Remove="Pages\Leagues\**" />
     <Content Remove="Pages\Racing\Wizard\**" />
     <EmbeddedResource Remove="Grid\**" />
+    <EmbeddedResource Remove="Pages\Leagues\**" />
     <EmbeddedResource Remove="Pages\Racing\Wizard\**" />
     <None Remove="Grid\**" />
+    <None Remove="Pages\Leagues\**" />
     <None Remove="Pages\Racing\Wizard\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Pages\Leagues\" />
     <Folder Include="wwwroot\json\" />
   </ItemGroup>
 
